fixes minor css issues and adds text to project gallery
-fixes text being invisible or incorrect colour on gallery links
-adds text to gallery

--- a/pages/AllProjects.css
+++ b/pages/AllProjects.css
@@ -17,4 +17,5 @@ h2{
     display: flex;
     flex-direction: column;
     padding: 10px;
+    color: #ffd256;
 }
