--- a/pages/mainpage.css
+++ b/pages/mainpage.css
@@ -112,6 +112,7 @@
 }
 
 .popupImage{
+    /*display: none;*/
     padding: 10px;
 }
 
@@ -119,6 +120,7 @@
     display: flex; 
     flex-direction: column; 
     padding: 6px;
+    color: #181818;
 }
 
 .galleryImage{
